--- a/Blogy.WebUI/Areas/Admin/Views/Article/Index.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Article/Index.cshtml
@@ -15,9 +15,9 @@
             <div class="col-xl-12">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Yazar Listesi</h4>
+                        <h4 class="card-title">Makale Listesi</h4>
                         <p class="card-subtitle mb-4">
-                            Yazar ile ilgili işlemleri buradan gerçekleştirebilirsiniz.
+                            Makale ile ilgili işlemleri buradan gerçekleştirebilirsiniz.
                         </p>
                         <div class="table-responsive">
                             <table class="table mb-0">
